fixed bg not showing on safari browser

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,6 +1,5 @@
 .main {
-  background-image: url(../public/banner.jpg);
-  background-color: transparent;
+  background-image: url(../public/banner.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
